# shorty

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  OG_IMAGE_CREATION_GUIDE.md  README.md  SEO_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ec0aed3452ef_init.py
app/: main.py
app/api/: link.py  router.py
app/api/routes/: link.py
app/core/: config.py  exception.py  logger.py  pydantic.py  rate_limit.py  template.py
app/db/: init.py  schema.py
app/models/: input.py  response.py
app/services/: link.py  qr.py
app/static/: llms.txt  robots.txt  site.webmanifest
app/templates/: 404.html  home.html  layout.html
app/web/: router.py
app/web/routes/: favicon.py  home.py  not_found.py  robots.py  short_id.py  sitemap.py
tests/: conftest.py  test_db_init.py  test_exception_handlers.py  test_exceptions.py  test_input_models.py  test_logger.py  test_main.py  test_rate_limit_coverage.py
tests/api/: test_link.py  test_normalize_url.py  test_rate_limit.py
tests/core/: test_logger.py
tests/services/: test_link_service.py  test_link_service_edge_cases.py  test_qr.py  test_qr_edge_cases.py
tests/web/: test_robots.py  test_sitemap.py
